--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link href='https://fonts.googleapis.com/css?family=Alfa Slab One' rel='stylesheet'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Bowlby+One" rel="stylesheet">
 	<style>
 		.mySlides {display:none}
 		.w3-left, .w3-right, .w3-badge {cursor:pointer}
@@ -37,9 +38,9 @@
 
 <!-- NAV BAR! -->
 <div style=" background-color:#425262; height: 300px; z-index:10; width: 100%;position: relative; min-width: 1000px;"> 
-<img src="assets/Images/TopBannerIcon.png" alt="Los Angeles" style="width:500px; margin-left: 20%;">
+<img src="assets/Images/TopBannerIcon.png" style="width:700px; margin-left: 20%;">
 		<nav class="nav nav5">
-            <ul style = " display: inline-block; padding-left: 50px;">
+            <ul style = " display: inline-block; padding-left: 20px;">
                 <li>
                 <a class = "navItem" href="#" style = "color:#92a2bd ">Home</a>
                     <ul class = "subNav">
@@ -127,34 +128,9 @@
     </a>
   </div>
 </div>
-		<script>
-var slideIndex = 1;
-showDivs(slideIndex);
 
-function plusDivs(n) {
-  showDivs(slideIndex += n);
-}
-
-function currentDiv(n) {
-  showDivs(slideIndex = n);
-}
-
-function showDivs(n) {
-  var i;
-  var x = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("demo");
-  if (n > x.length) {slideIndex = 1}    
-  if (n < 1) {slideIndex = x.length}
-  for (i = 0; i < x.length; i++) {
-     x[i].style.display = "none";  
-  }
-  for (i = 0; i < dots.length; i++) {
-     dots[i].className = dots[i].className.replace(" w3-white", "");
-  }
-  x[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " w3-white";
-}
-		</script>
+<script src="banner_photo_feed_script.js"></script>
+	
 <!--BAR BELOW THE IMAGE! --> 
 <div style = "background-color: #2b3642; height: 100px; width: 100%; min-width: 1000px;">
 
@@ -163,7 +139,7 @@ function showDivs(n) {
 <div id="mainPage">
 <section>
 	<div class="container-fluid">
-	<div class="row" style="margin-top:25px; margin-left:25px; margin-right:25px; margin-bottom:25px;">
+	<div class="row" style="margin-top:25px; margin-left:25px; margin-right:25px; margin-bottom:25px; border-bottom: 5px solid; border-color: #D3D3D3;">
 		<div class="col-md-4">
 			<h1>What is the AAUP?</h1>
 			<p>The American Association of University Professors (AAUP) is a nonprofit membership association of faculty and other academic professionals. Its mission is to advance academic freedom and shared governance; to define fundamental professional values and standards for higher education; to promote the economic security of faculty, academic professionals, graduate students, post‐doctoral fellows, and all those engaged in teaching and research in higher education; to help the higher education community organize to make our goals a reality; and to ensure higher education's contribution to the common good.</p>
@@ -178,7 +154,53 @@ function showDivs(n) {
 		</div>
 		<div class="col-md-4">
 			<h1>Contact Us!</h1>
-			<p>CSM has a recognized Chapter of AAUP – one of more than 500 local groups that serve accredited colleges and universities. We promote basic academic freedom, quality education, and other core AAUP principles and belong to the Colorado Conference (https://aaupcolorado.org/).   We encourage you to learn more about AAUP and become a member.  Regardless of formal membership, however, you are welcome to participate in our Chapter activities.  We serve the needs of all faculty and academic professionals, post‐doctoral fellows, and graduate students engaged in teaching and research and you can reach us by direct contact with any of the Chapter officers, or privately through our “Need Help” service.</p>
+			<p> We serve the needs of all faculty and academic professionals, post‐doctoral fellows, and graduate students engaged in teaching and research. You can reach us by direct contact with any of the Chapter officers, or privately by clicking the "Need Help?" button below.</p>
+		<div class="buttonContainer">	
+			<button class = "needHelpButton" onclick="document.getElementById('id01').style.display='block'">Need Help?</button>
+			</div>
+
+<div id="id01" class="modal">
+  
+  <form class="modal-content animate">
+
+
+    <div class="container containerBorder">
+	    <div class="imgcontainer">
+			<span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times
+			</span>
+		</div>
+		<label><b>Tell Us What We Can Help You With:</b></label>
+		<textarea class="form-control" id="exampleTextarea" placeholder="Write your message here" rows="1"></textarea>
+
+		<div class="form-group textAreaHeight">
+			<label for="exampleTextarea">Your Message:</label>
+			<textarea class="form-control" id="exampleTextarea" placeholder="Write your message here" rows="5"></textarea>
+		</div>
+        
+		<button type="submit" class = "submittButton">Submit</button>
+      
+    </div>
+  </form>
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('id01');
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>	
+			
+			
+			
+			
+			
+			
+			
 		</div>
   </div>
   <div class="row" style="margin-top:25px; margin-left:25px; margin-right:25px; margin-bottom:25px;">
