Added stle.css and index.html

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 <div id="mainPage">
 <section>
 	<div class="container-fluid">
-	<div class="row" style="margin-top:25px; margin-left:25px; margin-right:25px; margin-bottom:25px; border-bottom: 5px solid; border-color: #D3D3D3; text-align: justify;">
+	<div class="row" style="margin-top:25px; margin-left:25px; margin-right:25px; margin-bottom:25px; border-bottom: 5px solid; border-color: #D3D3D3;">
 		<div class="col-md-4">
 			<h1>What is the AAUP?</h1>
 			<p>The American Association of University Professors (AAUP) is a nonprofit membership association of faculty and other academic professionals. Its mission is to advance academic freedom and shared governance; to define fundamental professional values and standards for higher education; to promote the economic security of faculty, academic professionals, graduate students, post‐doctoral fellows, and all those engaged in teaching and research in higher education; to help the higher education community organize to make our goals a reality; and to ensure higher education's contribution to the common good.</p>
@@ -234,15 +234,14 @@ window.onclick = function(event) {
 		</div>
   </div>
   <div class="row" style="margin-top:25px; margin-left:25px; margin-right:25px; margin-bottom:25px;">
-    <div class="col-md-8" style="background-color:lavender;">
+    <div class="col-md-8">
 		<h2> FEATURED VIDEO: </h2>
 		<p> AAUP 2016 A Year in Review </p>
 		<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FAAUPNational%2Fvideos%2F1378773228822825%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
 
 	</div>
 	<div class="col-md-4">
-		
-<a class="twitter-timeline" data-width="300" data-height="400" href="https://twitter.com/AAUP">Tweets by AAUP</a>
+			<a class="twitter-timeline" data-width="300" data-height="400" href="https://twitter.com/AAUP">Tweets by AAUP</a>
 	</div>
 </div>
 
