updated professor profile page

--- a/faculty.html
+++ b/faculty.html
@@ -86,7 +86,7 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">AAUP
+                <h1 class="page-header" style = "padding-left: 50px;">AAUP
                     <small>Faculty</small>
                 </h1>
             </div>
@@ -97,14 +97,18 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                    <img class="img-responsive" src="assets/Facultyimages/uweGreife.jpg" alt="" style = "padding-left: 50px;">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Project One</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <h3><b>Uwe Greife</b></h3>
+                <h4>
+					<b>Chapter Secretary and Treasurer</b><br></h4>
+                <p>Professor of Physics<br>
+					Department of Physics<br>
+					Phone: (303) 273-3618<br>
+					Email: ugreife@mines.edu</p>
+                <a class="btn btn-primary" href="http://inside.mines.edu/~ugreife/UGResearchMain.html">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
@@ -115,14 +119,16 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                    <img class="img-responsive" src="assets/Facultyimages/marcelo.png" alt="" style = "padding-left: 50px;">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Project Two</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <h2><b>Marcelo Godoy Simões</b></h2>
+                <h4><b>Chapter Vice President</b><br></h4>
+                <p>	Professor of Electrical Engineering<br>
+					Phone: (303) 384-2350<br>
+					Email: msimoes@mines.edu</p>
+                <a class="btn btn-primary" href="http://inside.mines.edu/~msimoes/publications.html">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
@@ -133,7 +139,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                    <img class="img-responsive" src="assets/Facultyimages/wendy.png" alt="">
                 </a>
             </div>
             <div class="col-md-5">
