--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   </div>
 </div>
 
-<script src="banner_photo_feed_script.js"></script>
+
 	
 <!--BAR BELOW THE IMAGE! --> 
 <div style = "background-color: #2b3642; height: 100px; width: 100%; min-width: 1000px;">
@@ -235,10 +235,11 @@ window.onclick = function(event) {
   </div>
   <div class="row" style="margin-top:25px; margin-left:25px; margin-right:25px; margin-bottom:25px;">
     <div class="col-md-8">
-		<h2> FEATURED VIDEO: </h2>
-		<p> AAUP 2016 A Year in Review </p>
-		<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FAAUPNational%2Fvideos%2F1378773228822825%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-
+		<div>
+			<h2> FEATURED VIDEO: </h2>
+			<p> AAUP 2016 A Year in Review </p>
+<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FAAUPNational%2Fvideos%2F1378773228822825%2F&show_text=0&width=560" pading-bottom="50%" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+		</div>
 	</div>
 	<div class="col-md-4">
 			<a class="twitter-timeline" data-width="300" data-height="400" href="https://twitter.com/AAUP">Tweets by AAUP</a>
