Faculty PAge and MainPage updated. Images for faulty implemented along with bio information and links to the personal website

--- a/faculty.html
+++ b/faculty.html
@@ -86,22 +86,73 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header" style = "padding-left: 50px;">AAUP
-                    <small>Faculty</small>
+                <h1 class="page-header" style = "padding-left: 50px; font-size: 30px;">
+					AAUP
+					<small>Faculty</small>
                 </h1>
             </div>
         </div>
         <!-- /.row -->
 
         <!-- Project One -->
-        <div class="row">
+		 
+		         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="assets/Facultyimages/uweGreife.jpg" alt="" style = "padding-left: 50px;">
+                    <img class="img-responsive" src="assets/Facultyimages/wendy.jpg" alt="" style = "padding-left: 50px; height: 250px;">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3><b>Uwe Greife</b></h3>
+                <h2><b>Wendy Harris</b></h2>
+                <h4><b>Chapter President</b> </h4>
+                <p> Professor Geochemistry <br>
+					Department of Geology and Geological Engineering <br>
+					Phone: (+1) 303-273-3821 <br>
+					Fax: (+1) 303-273-3859<br>
+					Email: wharriso@mines.edu</p>
+                <a class="btn btn-primary" href="http://inside.mines.edu/Wendy-Harrison">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
+            </div>
+        </div>
+		
+		
+		
+		
+		
+        
+        <!-- /.row -->
+
+        <hr>
+
+        <!-- Project Two -->
+        <div class="row">
+            <div class="col-md-7">
+                <a href="#">
+                    <img class="img-responsive" src="assets/Facultyimages/marcelo.png" alt="" style = "padding-left: 50px; height: 250px;">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h2><b>Marcelo Godoy Simões</b></h2>
+                <h4><b>Chapter Vice President</b><br></h4>
+                <p>	Professor of Electrical Engineering<br>
+					Department of Electrical & Computer Science<br>
+					Phone: (303) 384-2350<br>
+					Email: msimoes@mines.edu</p>
+                <a class="btn btn-primary" href="http://inside.mines.edu/~msimoes/publications.html">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
+
+        <!-- Project Three -->
+		<div class="row">
+            <div class="col-md-7">
+                <a href="#">
+                    <img class="img-responsive" src="assets/Facultyimages/uweGreife.jpg" alt="" style = "padding-left: 50px; height: 250px;">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h2><b>Uwe Greife</b></h2>
                 <h4>
 					<b>Chapter Secretary and Treasurer</b><br></h4>
                 <p>Professor of Physics<br>
@@ -115,57 +166,22 @@
 
         <hr>
 
-        <!-- Project Two -->
-        <div class="row">
-            <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive" src="assets/Facultyimages/marcelo.png" alt="" style = "padding-left: 50px;">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h2><b>Marcelo Godoy Simões</b></h2>
-                <h4><b>Chapter Vice President</b><br></h4>
-                <p>	Professor of Electrical Engineering<br>
-					Phone: (303) 384-2350<br>
-					Email: msimoes@mines.edu</p>
-                <a class="btn btn-primary" href="http://inside.mines.edu/~msimoes/publications.html">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Three -->
-        <div class="row">
-            <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive" src="assets/Facultyimages/wendy.png" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Project Three</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
         <!-- Project Four -->
         <div class="row">
 
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                    <img class="img-responsive" src="assets/Facultyimages/chuck.jpg" alt="" style = "padding-left: 50px; height: 250px;">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Project Four</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <h2><b>Charles (Chuck) Stone</b></h2>
+                <h4><b>Teaching Professors’ Representative</b></h4>
+                <p>Teaching Professor<br>
+					Department of Physics<br>
+					Phone: (303) 273-3762<br>
+					Email: cstone@mines.edu</p></p>
+                <a class="btn btn-primary" href="http://inside.mines.edu/PH-charles-chuck-stone">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
 
