Various updates including various banner images and page funcitonality

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
+	<link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -34,7 +34,6 @@
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<!-- Script for Twitter feed -->
 <script>
   window.fbAsyncInit = function() {
     FB.init({
@@ -54,6 +53,7 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
+<!-- Script for Twitter feed -->
 <script>window.twttr = (function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0],
     t = window.twttr || {};
@@ -80,42 +80,43 @@
                 <a class = "navItem" href="index.html" style = "color:#92a2bd ">Home</a>
                 </li>
                 <li>
-                    <a class = "navItem" href="#" style = "color:#92a2bd">News + Events</a>
+                    <a class = "navItem" href="#" style = "color: #92a2bd">News + Events</a>
                     <ul class = "subNav">
-                        <li><a href="#">Subnav Item</a></li>
-                        <li><a href="#">Subnav Item</a></li>
-                        <li><a href="#">Subnav Item</a></li>
+                        <li><a href="#">News</a></li>
+                        <li><a href="#">Events</a></li>
+                        <li><a href="#">Awards</a></li>
                     </ul>
                 </li>
                 <li>
                     <a class = "navItem" href="#" style = "color:#92a2bd ">Information</a>
                     <ul class = "subNav">
-                        <li><a href="#">Subnav Item</a></li>
-                        <li><a href="#">Subnav Item</a></li>
+                        <li><a href="#">BYLAWS</a></li>
+                        <li><a href="#">Documents</a></li>
                         <li><a href="#">Subnav Item</a></li>
                     </ul>
                 </li>
                 <li>
                     <a class = "navItem" href="#" style = "color:#92a2bd ">Resources</a>
                     <ul class = "subNav">
-                        <li><a href="#">Subnav Item</a></li>
-                        <li><a href="#">Subnav Item</a></li>
-                        <li><a href="#">Subnav Item</a></li>
+                        <li><a href="#">Links</a></li>
+                        <li><a href="#">Awards</a></li>
+                        <li><a href="#">Constitution</a></li>
+						<li><a href="#">Admin</a></li>
                     </ul>
                 </li>
                 <li>
                     <a class = "navItem" href="#" style = "color:#92a2bd ">Who We Are</a>
                     <ul class = "subNav">
                         <li><a class = "subNav" href="faculty.html">Faculty</a></li>
-                        <li><a href="#">Subnav Item</a></li>
+                        <li><a href="#">Our Purpose</a></li>
                         <li><a href="#">Subnav Item</a></li>
                     </ul>
                 </li>
 				                <li>
                     <a class = "navItem" href="#" style = "color:#92a2bd ">Membership</a>
                     <ul class = "subNav">
-                        <li><a class = "subNav" href="#">Subnav Item</a></li>
-                        <li><a href="#">Subnav Item</a></li>
+                        <li><a href="#">Why Join Us?</a></li>
+                        <li><a href="#">How To Join Us</a></li>
                         <li><a href="#">Subnav Item</a></li>
                     </ul>
                 </li>
@@ -163,6 +164,8 @@
 	
 <!--BAR BELOW THE IMAGE! --> 
 <div style = "background-color: #2b3642; height: 100px; width: 100%; min-width: 1000px;">
+
+<img src="assets/Images/bannerTitle.png" alt="Colorado School of Mines Chapter" style = "padding-left: 20%;">
 
 </div> 
 <!-- NAIN PAGE IN -->
@@ -265,8 +268,8 @@ window.onclick = function(event) {
 
 			<div class="col-xs-5" style= " background-color: clear; margin-top: -50px;">
 
-				<button class="buttonFooter buttonFooter1 buttonFooterHover" >Visit AAUP</button>
-				<button class="buttonFooter buttonFooter2 buttonFooterHover" >Visit AAUP of Colorado</button>
+				<a class="buttonFooter buttonFooter1 buttonFooterHover"  href="https://www.aaup.org/">Visit AAUP</a>
+				<a  class="buttonFooter buttonFooter2 buttonFooterHover" href="https://aaupcolorado.org/" >Visit AAUP of Colorado</a>
 				<div style = "color: #6b7b8b; margin-right: 10px; width: 300px; float: right;">
 				<div style = " float: right;">
 				<p>Follow AAUP </p>
