added our_purpose, news page. Revised the styling the of the nav bar and page headers

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   return t;
 }(document, "script", "twitter-wjs"));</script>
 <div class="light-blue">
-	<div class="container navBar">
+	<div class="container navBar" style = "width: 100%;">
 		<nav class="navbar navbar-toggleable-lg navbar-inverse bg-faded" style = "background-color: #425262; border: none; margin-bottom: 0px; ">
 			<button class="navbar-toggler navbar-toggler-right  dark-blue" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -114,8 +114,8 @@
 							Who We Are
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#">Faculty</a>
-							<a class="dropdown-item" href="#">Our Purpose</a>
+							<a class="dropdown-item" href="faculty.html">Faculty</a>
+							<a class="dropdown-item" href="our_purpose.html">Our Purpose</a>
 						</div>
 					</li>
 					<li class="nav-item dropdown style-navBarItem">
@@ -123,18 +123,22 @@
 							Links
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#">Why Join Us?</a>
-							<a class="dropdown-item" href="#">Join AAUP</a>
+							<a class="dropdown-item" href="https://www.aaup.org/">AAUP - National</a>
+							<a class="dropdown-item" href="https://www.aaup.org/reports-publications/journal-academic-freedom">AAUP Journal of Academic Freedom</a>
+							<a class="dropdown-item" href="http://portfolio.du.edu/aaup">University Of Denver Chapter</a>
+							<a class="dropdown-item" href="https://aaupcsu.org/">Colorado State University - Fort Collins Chapter</a>
+							<a class="dropdown-item" href="https://sites.google.com/site/coloradoadjunctswiki/">Colorado Community College Chapter</a>
+							<a class="dropdown-item" href="http://aaup-msudenver.org/">Metropolitan State University Chapter</a>
+							<a class="dropdown-item" href="http://www.cu-aaup.org/">University of Colorado- Boulder Chapter</a>
 						</div>
 					</li>
 					<li class="nav-item dropdown style-navBarItem">
 						<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Why Join Us?
+							Membership
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#">Action</a>
-							<a class="dropdown-item" href="#">Another action</a>
-							<a class="dropdown-item" href="#">Something else here</a>
+							<a class="dropdown-item" href="join_aaup.html">Why Join Us?</a>
+							<a class="dropdown-item" href="https://www.aaup.org/membership/join">Join AAUP</a>
 						</div>
 					</li>
 				</ul>
@@ -192,7 +196,7 @@
 <div id="mainPage">
 <section>
 	<div class="container-fluid">
-	<div class="row" style="margin-top:25px; margin-left:25px; margin-right:25px; margin-bottom:25px; border-bottom: 5px solid; border-color: #D3D3D3;">
+	<div class="row" style=" margin-top:25px; margin-left:25px; margin-right:25px; margin-bottom:25px; border-bottom: 5px solid; border-color: #D3D3D3;">
 		<div class="col-md-4">
 			<h1>What is the AAUP?</h1>
 			<p>The American Association of University Professors (AAUP) is a nonprofit membership association of faculty and other academic professionals. Its mission is to advance academic freedom and shared governance; to define fundamental professional values and standards for higher education; to promote the economic security of faculty, academic professionals, graduate students, post‐doctoral fellows, and all those engaged in teaching and research in higher education; to help the higher education community organize to make our goals a reality; and to ensure higher education's contribution to the common good.</p>
@@ -203,14 +207,14 @@
 		<div class="col-md-4">
 			<h1>CSM Chapter of AAUP</h1>
 			<p>CSM has a recognized Chapter of AAUP – one of more than 500 local groups that serve accredited colleges and universities. We promote basic academic freedom, quality education, and other core AAUP principles and belong to the Colorado Conference (https://aaupcolorado.org/).   We encourage you to learn more about AAUP and become a member.  Regardless of formal membership, however, you are welcome to participate in our Chapter activities.  We serve the needs of all faculty and academic professionals, post‐doctoral fellows, and graduate students engaged in teaching and research and you can reach us by direct contact with any of the Chapter officers, or privately through our “Need Help” service.</p>
-	
 		</div>
 		<div class="col-md-4">
 			<h1>Contact Us!</h1>
 			<p> We serve the needs of all faculty and academic professionals, post‐doctoral fellows, and graduate students engaged in teaching and research. You can reach us by direct contact with any of the Chapter officers, or privately by clicking the "Need Help?" button below.</p>
-		<div class="buttonContainer">	
-			<button class = "needHelpButton" onclick="document.getElementById('id01').style.display='block'">Need Help?</button>
-			</div>
+			<a class="btn btn-primary" style = "color: white;" onclick="document.getElementById('id01').style.display='block'">Need Help! <span class="glyphicon glyphicon-chevron-right"></span></a>
+
+			<p><br> You are also welcome to join the meetings for Faculty Senate. The Faculty Senate promotes cooperation and understanding among the various constituencies that comprise the school.
+			Click <a href = "http://facultysenate.mines.edu/"><u>Here</u></a> for more information!
 
 <div id="id01" class="modal">
   
