--- a/join_aaup.html
+++ b/join_aaup.html
@@ -6,34 +6,28 @@
   
   
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- STYLE -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	
-	<!-- SCRIPTS -->
-	<script src="./webNav_files/jquery-1.11.1.min.js.download"></script>
-    <script src="./webNav_files/bootstrap.min.js.download"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	
-	<!-- FONTS -->
-	<link href="https://fonts.googleapis.com/css?family=Racing+Sans+One" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Bowlby+One" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Alfa Slab One' rel='stylesheet'>
-	<link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Bowlby+One" rel="stylesheet">
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+	
+	
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	<style>
 		.mySlides {display:none}
 		.w3-left, .w3-right, .w3-badge {cursor:pointer}
 		.w3-badge {height:13px;width:13px;padding:0}
 	</style>
-	
-	
 </head>
 
 
@@ -55,54 +49,73 @@ $(document).ready(function(){
 });
 </script>
 
-<div class="navBar "> 
-<img src="assets/Images/TopBannerIcon.png" style="width:700px; margin-left: 20%;">
-		<nav class="nav nav5">
-            <ul style = " display: inline-block; padding-left: 20px;">
-                <li>
-                <a class = "navItem" href="index.html" style = "color:#92a2bd ">Home</a>
-                </li>
-                <li>
-                    <a class = "navItem" href="#" style = "color: #92a2bd">News + Events</a>
-                    <ul class = "subNav">
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">Events</a></li>
-                        <li><a href="#">Awards</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a class = "navItem" href="#" style = "color:#92a2bd ">Information</a>
-                    <ul class = "subNav">
-                        <li><a href="#">BYLAWS</a></li>
-                        <li><a href="#">Documents</a></li>
-                        <li><a href="#">Subnav Item</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a class = "navItem" href="#" style = "color:#92a2bd ">Resources</a>
-                    <ul class = "subNav">
-                        <li><a href="#">Constitution</a></li>
-						<li><a href="#">Admin</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a class = "navItem" href="#" style = "color:#92a2bd ">Who We Are</a>
-                    <ul class = "subNav">
-                        <li><a class = "subNav" href="faculty.html">Faculty</a></li>
-                        <li><a href="#">Our Purpose</a></li>
-                        <li><a href="#">Subnav Item</a></li>
-                    </ul>
-                </li>
-				                <li>
-                    <a class = "navItem" href="#" style = "color:#92a2bd ">Membership</a>
-                    <ul class = "subNav">
-                        <li><a href="#">Why Join Us?</a></li>
-                        <li><a href="join_aaup.html">Join AAUP</a></li>
-                        <li><a href="#">Subnav Item</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+<div class="light-blue">
+	<div class="container navBar" style = "width: 100%;">
+		<nav class="navbar navbar-toggleable-lg navbar-inverse bg-faded" style = "background-color: #425262; border: none; margin-bottom: 0px; ">
+			<button class="navbar-toggler navbar-toggler-right  dark-blue" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<a class="navbar-brand currentPageFont" style = "font-size:40px;">Membership</a>
+			<div class="collapse navbar-collapse" class = "margin-bottom: 0px;" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+					<li class="nav-item style-navBarItem">
+						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item dropdown style-navBarItem">
+						<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							News + Events
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="#">News</a>
+							<a class="dropdown-item" href="#">Events</a>
+						</div>
+					</li>
+					<li class="nav-item dropdown style-navBarItem">
+						<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Information
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="#">Constitution</a>
+							<a class="dropdown-item" href="#">BYLAWS</a>
+							<a class="dropdown-item" href="#">Documents</a>
+						</div>
+					</li>
+					<li class="nav-item dropdown style-navBarItem">
+						<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Who We Are
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="faculty.html">Faculty</a>
+							<a class="dropdown-item" href="our_purpose.html">Our Purpose</a>
+						</div>
+					</li>
+					<li class="nav-item dropdown style-navBarItem">
+						<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Links
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="https://www.aaup.org/">AAUP - National</a>
+							<a class="dropdown-item" href="https://www.aaup.org/reports-publications/journal-academic-freedom">AAUP Journal of Academic Freedom</a>
+							<a class="dropdown-item" href="http://portfolio.du.edu/aaup">University Of Denver Chapter</a>
+							<a class="dropdown-item" href="https://aaupcsu.org/">Colorado State University - Fort Collins Chapter</a>
+							<a class="dropdown-item" href="https://sites.google.com/site/coloradoadjunctswiki/">Colorado Community College Chapter</a>
+							<a class="dropdown-item" href="http://aaup-msudenver.org/">Metropolitan State University Chapter</a>
+							<a class="dropdown-item" href="http://www.cu-aaup.org/">University of Colorado- Boulder Chapter</a>
+						</div>
+					</li>
+					<li class="nav-item dropdown style-navBarItem">
+						<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Membership
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="join_aaup.html">Why Join Us?</a>
+							<a class="dropdown-item" href="https://www.aaup.org/membership/join">Join AAUP</a>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</div>
 </div>
 	
 <!-- NAIN PAGE IN -->
@@ -113,8 +126,8 @@ $(document).ready(function(){
             <div class="col-lg-12" >
 				<div class = "testGradient">
 					<h1 class="page-header" style = "padding-left: 50px; font-size: 40px; font-family: 'Play', sans-serif;">
-						<span style = "font-size: 70px; font-weight: 900; color: #830303;"><b><i>JOIN</i></b></span>
-						<small>AAUP</small>
+						<span style = "font-size: 70px; font-weight: 900; color: #830303;"><b><i>AAUP</i></b></span>
+						<small>Why join us?</small>
 					</h1>
 				</div>
 
