--- a/news.html
+++ b/news.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html >
 <head>
   <meta charset="UTF-8">
   <title>CSM AAUP</title>
@@ -20,6 +20,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 	
 	
+	
+	
+	
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
@@ -32,18 +35,30 @@
 
 
 <body id = "grad1">
-<div id="fb-root"></div>
 
 
+<script type="text/javascript">
+$(document).ready(function(){
+    $(".dropdown").hover(            
+        function() {
+            $('.dropdown-menu', this).not('.in .dropdown-menu').stop(true,true).slideDown("400");
+            $(this).toggleClass('open');        
+        },
+        function() {
+            $('.dropdown-menu', this).not('.in .dropdown-menu').stop(true,true).slideUp("400");
+            $(this).toggleClass('open');       
+        }
+    );
+});
+</script>
 
-<!-- ***************************************** NAV BAR! ************************************************ -->
 <div class="light-blue">
 	<div class="container navBar" style = "width: 100%;">
 		<nav class="navbar navbar-toggleable-lg navbar-inverse bg-faded" style = "background-color: #425262; border: none; margin-bottom: 0px; ">
 			<button class="navbar-toggler navbar-toggler-right  dark-blue" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<a class="navbar-brand currentPageFont" style = "font-size:40px;">Who We Are</a>
+			<a class="navbar-brand currentPageFont" style = "font-size:40px;">Membership</a>
 			<div class="collapse navbar-collapse" class = "margin-bottom: 0px;" id="navbarNavDropdown">
 				<ul class="navbar-nav">
 					<li class="nav-item style-navBarItem">
@@ -96,8 +111,8 @@
 							Membership
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="join_aaup.html">Why Join Us?</a>
-							<a class="dropdown-item" href="https://www.aaup.org/membership/join">Join AAUP</a>
+							<a class="dropdown-item" href="#">Why Join Us?</a>
+							<a class="dropdown-item" href="#">Join AAUP</a>
 						</div>
 					</li>
 				</ul>
@@ -105,140 +120,32 @@
 		</nav>
 	</div>
 </div>
-<!-- **************************************** NAV BAR END ***************************************************** -->
-
 	
 <!-- NAIN PAGE IN -->
-<div id="mainPage">
+<div id="mainPage" style = "padding-bottom: 50px;">
 <section>
-        <!-- Page Heading -->
-        <div class="row">
-            <div class="col-lg-12">
-			
-			
-			
-							<div class = "testGradient">
-					<h1 class="page-header" style = "padding-left: 50px; font-size: 40px; font-family: 'Play', sans-serif;">
-						<span style = "font-size: 70px; font-weight: 900; color: #830303;"><b><i>AAUP</i></b></span>
-						<small>Faculty</small>
-					</h1>
-				</div>
-            </div>
-        </div>
-        <!-- /.row -->
+<?xml version="1.0" encoding="UTF-8" ?>
+<rss version="2.0">
+<channel>
+ <title>RSS Title</title>
+ <description>This is an example of an RSS feed</description>
+ <link>http://www.example.com/main.html</link>
+ <lastBuildDate>Thu, 04 Aug 2016 00:01:00 +0000 </lastBuildDate>
+ <pubDate>Thu, 04 Aug 2016 16:20:00 +0000</pubDate>
+ <ttl>1800</ttl>
 
-        <!-- Project One -->
-		 
-		         <div class="row">
-            <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive" src="assets/Facultyimages/wendy.jpg" alt="" style = "padding-left: 50px; height: 250px;">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h2><b>Wendy Harris</b></h2>
-                <h4><b>Chapter President</b> </h4>
-                <p> Professor Geochemistry <br>
-					Department of Geology and Geological Engineering <br>
-					Phone: (+1) 303-273-3821 <br>
-					Fax: (+1) 303-273-3859<br>
-					Email: wharriso@mines.edu</p>
-                <a class="btn btn-primary" href="http://inside.mines.edu/Wendy-Harrison">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
+ <item>
+  <title>Example entry</title>
+  <description>Here is some text containing an interesting description.</description>
+  <link>http://www.example.com/blog/post/1</link>
+  <guid isPermaLink="true">7bd204c6-1655-4c27-aeee-53f933c5395f</guid>
+  <pubDate> Thu, 04 Aug 2016 16:20:00 +0000</pubDate>
+ </item>
+
+</channel>
+</rss>
 		
-		
-		
-		
-		
-        
-        <!-- /.row -->
 
-        <hr>
-
-        <!-- Project Two -->
-        <div class="row">
-            <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive" src="assets/Facultyimages/marcelo.png" alt="" style = "padding-left: 50px; height: 250px;">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h2><b>Marcelo Godoy Simões</b></h2>
-                <h4><b>Chapter Vice President</b><br></h4>
-                <p>	Professor of Electrical Engineering<br>
-					Department of Electrical & Computer Science<br>
-					Phone: (303) 384-2350<br>
-					Email: msimoes@mines.edu</p>
-                <a class="btn btn-primary" href="http://inside.mines.edu/~msimoes/publications.html">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-		
-        <!-- Project Three -->
-        <div class="row">
-
-            <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive" src="assets/Facultyimages/LNickum_RMNP.png" alt="" style = "padding-left: 50px; height: 250px;">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h2><b>Lisa Nickum</b></h2>
-                <h4><b>Library Faculty Representative</b></h4>
-                <p>Associate Librarian<br>
-					Phone: 303-273-3695 <br>
-					Email: lnickum@mines.edu</p></p>
-                <a class="btn btn-primary" href="https://webapps.mines.edu/DirSearch/Home/detail/Nickum%2cLisa%2cS.%2c">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-		<hr>
-        <!-- Project Four -->
-		<div class="row">
-            <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive" src="assets/Facultyimages/uweGreife.jpg" alt="" style = "padding-left: 50px; height: 250px;">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h2><b>Uwe Greife</b></h2>
-                <h4>
-					<b>Chapter Secretary and Treasurer</b><br></h4>
-                <p>Professor of Physics<br>
-					Department of Physics<br>
-					Phone: (303) 273-3618<br>
-					Email: ugreife@mines.edu</p>
-                <a class="btn btn-primary" href="http://inside.mines.edu/~ugreife/UGResearchMain.html">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Four -->
-        <div class="row">
-
-            <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive" src="assets/Facultyimages/chuck.jpg" alt="" style = "padding-left: 50px; height: 250px;">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h2><b>Charles (Chuck) Stone</b></h2>
-                <h4><b>Teaching Professors’ Representative</b></h4>
-                <p>Teaching Professor<br>
-					Department of Physics<br>
-					Phone: (303) 273-3762<br>
-					Email: cstone@mines.edu</p></p>
-                <a class="btn btn-primary" href="http://inside.mines.edu/PH-charles-chuck-stone">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-
-        <!-- /.row -->
-
-        <hr>
 
 
 
@@ -246,12 +153,12 @@
 </section>
 </div>
 
-<footer style=" background-color:#425262; height: 220px; top: -10px; z-index:10; width: 100%;position: relative; min-width: 1500px;">
-	<div style = "background-color: #2b3642; height: 20px; width: 100%; min-width: 1000px;">
+<footer style=" background-color:#425262; height: 300px; top: -10px; z-index:10; width: 100%;position: relative; min-width: 1500px;">
+	<div style = "background-color: #2b3642; height: 50px; width: 100%; min-width: 1000px;">
 
 	</div>
 
-		<div class="row" style="margin-left: 15%; margin-top: 10px; margin-right: 15%; font-weight: bold; font-size:medium;">
+		<div class="row" style="margin-left: 15%; margin-top: 50px; margin-right: 15%; font-weight: bold; font-size:medium;">
 			<div class="col-xs-7">
 				<img src="assets/Images/aaup_nav.png" style = "width:195.5px; height: 68px; float: left;"/>
 				<p style= "float:left; position: relative; margin-left: 10px; color: #92a2bd;">
@@ -259,7 +166,7 @@
 				</p>
 			</div>
 
-			<div class="col-xs-5" style= " background-color: clear; margin-top: 0px;">
+			<div class="col-xs-5" style= " background-color: clear; margin-top: -50px;">
 
 				<a class="buttonFooter buttonFooter1 buttonFooterHover"  href="https://www.aaup.org/">Visit AAUP</a>
 				<a  class="buttonFooter buttonFooter2 buttonFooterHover" href="https://aaupcolorado.org/" >Visit AAUP of Colorado</a>
@@ -277,18 +184,5 @@
 		</div>
 
 </footer>
-
-        <!-- javascript libraries / javascript files set for navbar --> 
-        <script type="text/javascript" src="js/jquery.min.js"></script>
-        <script type="text/javascript" src="js/modernizr.js"></script>
-        <script type="text/javascript" src="js/bootstrap.js"></script> 
-        <script type="text/javascript" src="js/bootstrap-hover-dropdown.js"></script>
-        <script type="text/javascript" src="js/jquery.easing.1.3.js"></script> 
-        <script type="text/javascript" src="js/skrollr.min.js"></script>  
-        <script type="text/javascript" src="js/smooth-scroll.js"></script>
-         <!-- jquery appear -->
-        <script type="text/javascript" src="js/jquery.appear.js"></script>
-   
-        <script type="text/javascript" src="js/mainNav.js"></script>
 </body>
 </html>
